# tipe_2025

./: .gitignore  .gitmodules  Makefile  README.md  data.md  dot.md  dune-project  output.csv  tlp_tipe.opam
project/: Makefile  dune-project  notes.md  tlp_tipe.opam
project/.github/: build.yml
project/_build/: .db  .digest-db  log
project/_build/default/: META.tlp_tipe  tlp_tipe.dune-package  tlp_tipe.install
project/_build/default/.dune/: configurator  configurator.v2
project/_build/default/.ppx/0bb5094b13567c3c4e1ee33245b80e63/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
project/_build/default/.ppx/52c49c7c6bc3dda051f54733e606b527/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
project/_build/default/lib/lexer/: lexer.cma  lexer.cmxa  lexer.cmxs
project/_build/default/lib/lexer/.merlin-conf/: lib-tlp_tipe.lexer
project/_build/default/lib/parser/: parser.cma  parser.cmxa  parser.cmxs  parser.ml  parser.pp.ml
project/_build/default/lib/parser/.merlin-conf/: lib-tlp_tipe.parser
project/_build/default/lib/token/: token.cma  token.cmxa  token.cmxs  token.ml  token.pp.ml
project/_build/default/lib/types/: types.cma  types.cmxa  types.cmxs  types.ml  types.pp.ml
project/_build/default/test/: test_parsing.ml
project/_build/default/test/.merlin-conf/: exe-test_parsing
project/_build/default/test/_build/_tests/: Parser  (+1 more)
project/lib/lexer/: dune  lexer.ml  lexer.mll
project/lib/parser/: dune  parser.ml
project/lib/token/: dune  token.ml
project/lib/types/: dune  types.ml
project/test/: dune  main2.lc  test_lexing.ml  test_parsing.ml  test_typing.ml
(+206 files in other folders)
